kubernetes/k3s/media/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: media
  labels:
    name: media
