kubernetes/k3s/media/debug.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: debug
spec:
  containers:
    - name: busybox
      image: busybox
      args:
        - sleep
        - "1000000"
      imagePullPolicy: Always
