kubernetes/k3s/media/jackett.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: media
spec:
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: jackett
        image: linuxserver/jackett
        readinessProbe:
          tcpSocket:
            port: 9117
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
          - name: jackett-config-pv-storage
            mountPath: /config
        ports:
        - containerPort: 9117
          name: jackett-ui
      volumes:
        - name: jackett-config-pv-storage
          persistentVolumeClaim:
            claimName: jackett-config-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: jackett-ui
  namespace: media
spec:
  selector:
    app: jackett
  ports:
    - protocol: TCP
      port: 9117
      targetPort: 9117
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  namespace: media
spec:
  rules:
    - host: 'jackett.coldbrew.labs'
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: jackett-ui
                port:
                  number: 9117
