kubernetes/k3s/media/medusa.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medusa
  namespace: media
spec:
  selector:
    matchLabels:
      app: medusa
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: medusa
    spec:
      containers:
      - name: medusa
        image: linuxserver/medusa
        readinessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
          - name: medusa-config-pv-storage
            mountPath: /config
          - name: tv
            mountPath: /tv
          - name: downloads
            mountPath: /downloads
        ports:
        - containerPort: 8081
          name: medusa-ui
      volumes:
        - name: medusa-config-pv-storage
          persistentVolumeClaim:
            claimName: medusa-config-pv-claim
        - name: tv
          nfs:
            server: 192.168.1.144
            path: /volume1/array/tv-shows
        - name: downloads
          nfs:
            server: 192.168.1.144
            path: /volume1/array/deluge
---
apiVersion: v1
kind: Service
metadata:
  name: medusa-ui
  namespace: media
spec:
  selector:
    app: medusa
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medusa
  namespace: media
spec:
  rules:
    - host: 'medusa.coldbrew.labs'
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: medusa-ui
                port:
                  number: 8081
