kubernetes/k3s/media/radarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr
        readinessProbe:
          tcpSocket:
            port: 7878
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
          - name: radarr-config-pv-storage
            mountPath: /config
          - name: movies
            mountPath: /movies
          - name: downloads
            mountPath: /downloads
        ports:
        - containerPort: 7878
          name: radarr-ui
      volumes:
        - name: radarr-config-pv-storage
          persistentVolumeClaim:
            claimName: radarr-config-pv-claim
        - name: movies
          nfs:
            server: 192.168.1.144
            path: /volume1/array/movies
        - name: downloads
          nfs:
            server: 192.168.1.144
            path: /volume1/array/deluge
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-ui
  namespace: media
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 7878
      targetPort: 7878
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
spec:
  rules:
    - host: 'radarr.coldbrew.labs'
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: radarr-ui
                port:
                  number: 7878
