kubernetes/k3s/media/sonarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        readinessProbe:
          tcpSocket:
            port: 8989
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
          - name: sonarr-config-pv-storage
            mountPath: /config
          - name: tv
            mountPath: /tv
          - name: downloads
            mountPath: /downloads
        ports:
        - containerPort: 8989
          name: sonarr-ui
      volumes:
        - name: sonarr-config-pv-storage
          persistentVolumeClaim:
            claimName: sonarr-config-pv-claim
        - name: tv
          nfs:
            server: 192.168.1.144
            path: /volume1/array/tv-shows
        - name: downloads
          nfs:
            server: 192.168.1.144
            path: /volume1/array/deluge
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-ui
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
spec:
  rules:
    - host: 'sonarr.coldbrew.labs'
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: sonarr-ui
                port:
                  number: 8989
